Add search functionality and improve navigation in the game display.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
         <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search games...">
+            <button type="button" id="search-btn">Search</button>
+        </div>
+    </div>
+
+    <!-- navigation bar -->
+    <div class="nav-bar">
+        <a href="#description-container">About</a>
+        <a href="#stats-container">Stats</a>
+        <a href="#games-container-start">Games</a>
     </div>
 
     <!-- background info about company -->
@@ -21,7 +32,7 @@
 
     <!-- top games & other interesting stats -->
     <h2>Stats</h2>
-    <div class="stats-container">
+    <div class="stats-container" id="stats-container">
         <div class="stats-card">
             <h3>Individual Contributions</h3>
             <p id="num-contributions">
@@ -48,7 +59,7 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
+    <h2 id="games-container-start">Our Games</h2>
     <p>Check out each of our games below!</p>
     <div id="button-container">
         <button id="unfunded-btn">Show Unfunded Only</button>
